--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibi</title>
+    <link rel="stylesheet" href="./style2.css">
 </head>
+
 <body>
-    This is the first commit to me
+    <div>
+
+        This is the first commit to me
+    </div>
 </body>
 </html>
