commit from javaid

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div class="st">
         This is the first commit to me
     </div>
+    <div>Tthis is commit from javaid</div>
 </body>
 </html>
